--- a/web_dev/5_lists/index.html
+++ b/web_dev/5_lists/index.html
@@ -3,6 +3,7 @@
 <h2>Ingredients</h2>
 
 <h3>For the dough:</h3>
+<!--Unordered list-->
 <ul>
   <li>¾ cup warm milk</li>
   <li>2 ¼ teaspoons yeast</li>
@@ -18,6 +19,7 @@
   <li>¼ cup butter</li>
 </ul>
 <h2>Instructions</h2>
+<!--Ordered list-->
 <ol>
   <li>Mix the milk with the yeast, sugar, eggs.</li>
   <li>Melt the butter and add to the mixture.</li>
